fixed the bug for the loding of new products in the homepage

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -13,7 +13,7 @@
         <section class="book-cards">
           <% prods.forEach(function(book, index) { %>
           <div class="book-card" onclick="redirectToBookPage('<%= book.id %>')">
-            <img src="/img/book<%= index + 1 %>.jpg" alt="<%= book.title %>" />
+            <img src="/img/book5.jpg" alt="<%= book.title %>" />
             <div>
               <h2><%= book.title %></h2>
               <p class="price"><%= book.price %></p>
