--- a/views/bookListing.ejs
+++ b/views/bookListing.ejs
@@ -16,17 +16,17 @@
         <form action="/add-book" method="POST">
           <div class="form-group">
             <label for="book-name">Book Name:</label>
-            <input type="text" id="book-name" name="book-name" required />
+            <input type="text" id="book-name" name="title" required />
           </div>
           <div class="form-group">
             <label for="book-price">Price:</label>
-            <input type="number" id="book-price" name="book-price" required />
+            <input type="number" id="book-price" name="price" required />
           </div>
           <div class="form-group">
             <label for="book-short-desc">Short Description:</label>
             <textarea
               id="book-short-desc"
-              name="book-short-desc"
+              name="shortDesc"
               rows="2"
               required
             ></textarea>
@@ -35,7 +35,7 @@
             <label for="book-long-desc">Long Description:</label>
             <textarea
               id="book-long-desc"
-              name="book-long-desc"
+              name="longDesc"
               rows="4"
               required
             ></textarea>
@@ -45,7 +45,7 @@
             <input
               type="file"
               id="book-image"
-              name="book-image"
+              name="image"
               accept="image/*"
               required
             />
