--- a/views/bookPage.ejs
+++ b/views/bookPage.ejs
@@ -8,13 +8,15 @@
   </head>
   <body>
     <%- include ('includes/header.ejs') %>
-    <div>
+    <div class="image-container">
       <img
         src="/img/horizontalImage.jpg"
         class="horizontal-image"
         alt="Horizontal Image"
       />
+    </div>
 
+    <div>
       <div class="book-container">
         <img src="<%= imgPath %>" class="book-image" alt="Book Image" />
         <div class="book-details">
