--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/hompage.css" />
+    <link rel="stylesheet" href="css/hompage.css" />
   </head>
   <body>
     <div class="screen">
@@ -13,7 +13,7 @@
         <section class="book-cards">
           <% prods.forEach(function(book, index) { %>
           <div class="book-card" onclick="redirectToBookPage('<%= book.id %>')">
-            <img src="/img/book1.jpg" alt="<%= book.title %>" />
+            <img src="/img/book<%= index+1 %>.jpg" alt="<%= book.title %>" />
             <div>
               <h2><%= book.title %></h2>
               <p class="price"><%= book.price %></p>
